--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -85,6 +85,8 @@
   img {
     max-width: 175px;
     border-radius: 50%;
+    width: auto;
+    height: auto;
 
     @include breakpoint($large) {
       padding: 5px;
