--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -84,12 +84,10 @@
 
   img {
     max-width: 175px;
-    //border-radius: 50%;
-    width: auto;
-    height: auto;
+    border-radius: 50%;
 
     @include breakpoint($large) {
-      padding: 5px;
+      padding: 3px;
       border: 1px solid $border-color;
     }
   }
